kubernetes/apps/media/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
spec:
  ports:
    - port: 80
  selector:
    app: audiobookshelf
