kubernetes/apps/media/audiobookshelf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - audiobookshelf.local.elmurphy.com
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
